# flappy

./: #Makefile#  .gitignore  EMAILHISTORY  Makefile  Screenies.tgz  TODO  haxe_setup  launchrandombotgedit.sh  random-shuffle.patch  rough_notes.txt
AI/: DiplomacyAI.cabal
AI_Client/: COPYING.BSD
Common/: DiplomacyCommon.cabal
Documents/: rough_notes.txt
Maps/: .map.hs.swp  graph_helper.py  map.hs  province_links.txt  province_names.txt  province_old.txt  std_map_def.txt  t_links.txt  test_map.txt
Presentation/: ExecutiveSummary.rtf  ProjectDemonstration.odp  ProjectDemonstrationCLIFF.odp  ProjectDemonstrationWITHHASKELL.odp
Reports/: .$report4.bib$  .$report4_refs.bib$  .nfs0000000000843694000001a2  .nfs0000000002393f02000001a1  AI_brainstorming.aux  AI_brainstorming.dvi  AI_brainstorming.tex  ArchitectureOverview.xmi  Makefile  developmentpractices.ascii  further_developments  learnbot_desc  onion_desc  relatedDipAI.bib  report2.aux  report2.tex  report2_bak.tex  report3.aux  report3.tex  report4.aux  report4.bbl  report4.bib  report4.bib.bak  report4.blg  report4.tex  (+18 more)
Server/: DaideClient.hs  DaideError.hs  DaideMessage.hs  DiplomacyMessage.hs  DiplomacyServer.cabal  DiplomacyToken.hs  Makefile  README  Serial.hs  TODO  dip_server.cabal  server.cabal  server.hs
Server/Diplomacy/Server/: ApplyMove.hs  Client.hs  server.hs
Server/src/: DaideClient.hs  DaideError.hs  DaideMessage.hs  DiplomacyApplyMove.hs  DiplomacyData.hs  DiplomacyError.hs  DiplomacyMessage.hs  DiplomacyToken.hs  Makefile  Setup.hs  mapStd.txt  server.hs
Server/testsuite/: AUTHORS
(+141 files in other folders)
