Name:			Diplomacy Server
Version: 		1.0
Description: 		A game server for the game of diplomacy.
License: 		BSD
License-file: 	 	LICENSE
Author: 		Andras Slemmer, Matthias Hueser, Luca Deltodesco
Maintainer: 		mh2308@doc.ic.ac.uk
Build-type: 		Simple
Cabal-version: 		>=1.2

Executable dip_server.out
  Main-is:	        dip_server.hs
  Build-depends:        base >=3 < 5